PEAR-2035 - fix word wrapping, fix animation, nicer slugs for tabs

--- a/docs/Data_Dictionary/viewer/dictionary.css
+++ b/docs/Data_Dictionary/viewer/dictionary.css
@@ -410,3 +410,10 @@ a.dictionary-anchor {
 .dropdown-menu.show {
     display: block;
 }
+
+td a {
+  word-break: normal !important;
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
